# StellarCred

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
circuits/age_proof/: Nargo.toml  Prover.toml
circuits/age_proof/src/: main.nr
circuits/commit/: Nargo.toml  Prover.toml
circuits/commit/src/: main.nr
circuits/funds_proof/: Nargo.toml  Prover.toml
circuits/funds_proof/src/: main.nr
circuits/income_proof/: Nargo.toml  Prover.toml
circuits/income_proof/src/: main.nr
circuits/jurisdiction_proof/: Nargo.toml  Prover.toml
circuits/jurisdiction_proof/src/: main.nr
circuits/kyc_proof/: Nargo.toml  Prover.toml
circuits/kyc_proof/src/: main.nr
circuits/scripts/: build.sh  gen_inputs.sh  sign.js
contracts/credential_verifier/: Cargo.toml
contracts/credential_verifier/src/: lib.rs  test.rs
contracts/credential_verifier/test_snapshots/test/: rejects_empty_proof.1.json  rejects_wrong_length_proof.1.json  verifies_age.1.json  verifies_income.1.json  verifies_jurisdiction.1.json  verifies_kyc.1.json  verifies_when_vk_set_and_inputs_present.1.json
contracts/gated_pool/: Cargo.toml
contracts/gated_pool/src/: lib.rs  test.rs
contracts/gated_pool/test_snapshots/test/: deposit_allowed_after_kyc.1.json  deposit_blocked_without_kyc.1.json  withdraw_is_open.1.json
contracts/issuer_registry/: Cargo.toml
contracts/issuer_registry/src/: lib.rs  test.rs
contracts/proof_registry/: Cargo.toml
contracts/proof_registry/src/: lib.rs  test.rs
contracts/proof_registry/test_snapshots/test/: age_threshold_stored_and_checked.1.json  check_claim_no_threshold_matches_is_verified.1.json  expires_after_ledger_time_passes.1.json  funds_threshold_stored_and_checked.1.json  rejects_invalid_proof.1.json  rejects_untrusted_issuer.1.json  rejects_wrong_issuer_key.1.json  revoke_clears_proof.1.json  submit_then_verified.1.json  unverified_holder_returns_false.1.json
fixtures/age/: proof  public_inputs  vk
fixtures/funds/: proof  public_inputs
fixtures/income/: proof  public_inputs  vk
fixtures/jurisdiction/: proof  public_inputs  vk
fixtures/kyc/: proof  public_inputs  vk
frontend/: .env.example  .gitignore  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/issue/: route.ts
frontend/app/apps/: page.tsx
frontend/app/developers/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/holder/: page.tsx
frontend/app/issuer/: page.tsx
frontend/app/verifier/: page.tsx
frontend/app/verify/: page.tsx
frontend/components/: Badge.tsx  Check.tsx  ConfigBanner.tsx  CredentialCard.tsx  SiteNav.tsx  WalletButton.tsx
frontend/lib/: contracts.ts  credential.ts  format.ts  issuer-sign.ts  proof.ts  protocols.tsx  stellar.ts  wallet-context.tsx  wallet.ts
frontend/public/circuits/: age.json  commit.json  funds.json  income.json  jurisdiction.json  kyc.json
frontend/scripts/: copy-bb.mjs
scripts/: deploy.sh
(+5 files in other folders)
