[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
# Pinned to 26.0.1 to match rs-soroban-ultrahonk, whose verifier uses the
# host-native BN254 crypto added in soroban-sdk 26.
soroban-sdk = "26.0.1"
# Real UltraHonk verifier (host-native BN254). Not published — sourced from git,
# pinned to the commit studied during de-risking.
ultrahonk_soroban_verifier = { git = "https://github.com/yugocabrio/rs-soroban-ultrahonk", rev = "661db07200f890b1bd9a7349ed787c70a706dd12", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
